# bolero

./: .gitignore  BoleroConfig.h.in  CMakeLists.txt  run_mac.sh  run_windows.bat
example/: CMakeLists.txt  dummy_main.cpp  example_section.cpp  main.cpp  main_glfw.cpp  main_glfw.h  section_list.h  section_manager.cpp  section_manager.h
src/: CMakeLists.txt
standalone_example/glfw_try/: CMakeLists.txt
try/glfw_try/: main.cpp
try/simple_cpp_try/: CMakeLists.txt  main.cpp
